--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass": "^1.26.10",
     "vue": "^2.6.12",
-    "vue-material": "^1.0.0-beta-15"
+    "vue-material": "^1.0.0-beta-15",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.5.1" 
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -19,7 +22,14 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11", 
+    "@vue/cli-plugin-router": "~4.3.0",
+    "@vue/cli-plugin-vuex": "~4.3.0", 
+    "@vue/eslint-config-prettier": "^6.0.0", 
+    "eslint-plugin-prettier": "^3.1.1", 
+    "prettier": "^1.19.1",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2"
   },
   "eslintConfig": {
     "root": true,
